feat: 스웨거 및 버그 해결
